# tls-switch

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  ReadMe.md  config.go  go.mod  main.go  proxy.go  pyproject.toml  server.go  sni.go  wheel.json
docs/: docinfo.json  mkdocs.yml
docs/mkdocs/: index.md  licence.md  release-notes.md  usage.md
go/: config.go  main.go  server.go
internal/: cli.go  config.go  config_test.go  proxy.go  proxyproto.go  proxyproto_test.go  server.go  sni.go
scripts/: build_wheels.py
tls_switch/: __init__.py  __main__.py  argbuilder.py  cli.py  config.py  engine.py  version.py
