[tool.hatch.build]
# Include _version.py in builds even though it's gitignored (generated at build time)
artifacts = ["tls_switch/_version.py"]

[tool.hatch.build.targets.wheel]
packages = ["tls_switch"]

[project]
name = "tls-switch"
requires-python = ">=3.12"
dynamic = ["version"]
license = "Unlicense"
authors = [
    { name = "WaterJuice" },
]
description = "TLS switch utility"
readme = "ReadMe.md"
keywords = ["tls", "switch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
]

[project.urls]
Source = "https://github.com/WaterJuice/tls-switch"

[project.scripts]
tls-switch = "tls_switch.cli:main"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
pattern = "default-unprefixed"

[tool.uv]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["F", "E", "W", "I", "Q", "B", "TC", "UP"]
ignore = ["E501", "B009", "B010", "UP036", "TC001", "TC003"]

[tool.ruff.lint.isort]
no-lines-before = ["future","standard-library","third-party","first-party","local-folder"]
force-single-line = true

[tool.pyright]
typeCheckingMode = "strict"
reportUnusedImport = "error"
pythonVersion = "3.12"
exclude = [".venv"]

[tool.cal-publish-python]
profile = "waterjuice"

[dependency-groups]
dev = [
    "ruff",
    "black",
    "pyright[nodejs]",
    "cal-mkdocs",
    "cal-publish-python>=0.4.0",
]
