[project]
name = "tls-switch"
requires-python = ">=3.12"
version = "0.0.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
]

[project.urls]
Documentation = "https://docs.waterjuice.org/tls-switch/latest/"
Source = "https://github.com/WaterJuice/tls-switch"

[tool.wj-publish]
profile = "waterjuice"

[tool.uv]

[dependency-groups]
dev = [
    "bin2whl>=1.0.0",
    "wj-mkdocs",
    "wj-publish",
]
